--- a/src/styles/RootPage.css
+++ b/src/styles/RootPage.css
@@ -1,4 +1,5 @@
 .short-description {
+  margin-top: 50px;
   display: flex;
   justify-content: space-evenly;
   align-items: center;
@@ -9,8 +10,12 @@
   font-size: 22px;
 }
 
+.skills-wrapper {
+  margin: 30px 0 0;
+}
+
 .skills-list {
-  margin-top: 50px;
+  margin-top: 10px;
   display: grid;
   grid-template-columns: 200px 200px;
   column-gap: 5%;
