--- a/src/styles/RootPage.css
+++ b/src/styles/RootPage.css
@@ -6,8 +6,13 @@
 }
 
 .short-description p {
-  max-width: 500px;
   font-size: 22px;
+}
+
+.short-description p.short-description-text {
+  max-width: 600px;
+  font-weight: 800;
+  text-align: justify;
 }
 
 .skills-wrapper {
