feat: Adiciona informações básicas dos projetos

--- a/src/styles/ProjectsPage.css
+++ b/src/styles/ProjectsPage.css
@@ -16,6 +16,10 @@
 }
 
 .project-card {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   border: 1px solid black;
   border-radius: 10px;
+  flex-direction: column;
 }
