--- a/src/styles/ProjectsPage.css
+++ b/src/styles/ProjectsPage.css
@@ -5,7 +5,6 @@
   column-gap: 5%;
   display: grid;
   list-style: none;
-  padding: 50px 0 0;
   height: 90%;
 }
 
@@ -31,9 +30,22 @@
 
 .project-infos {
   padding: 10px 20px;
+  height: 50%;
 }
 
-.project-links li {
+.project-links {
   padding: 0;
   list-style: none;
+}
+
+.description {
+  height: 70px;
+  margin: 0 0 15px;
+}
+
+.languages-list {
+  list-style: none;
+  padding: 0;
+  display: flex;
+  justify-content: space-evenly;
 }
