--- a/src/styles/ProjectsPage.css
+++ b/src/styles/ProjectsPage.css
@@ -46,6 +46,11 @@
 .languages-list {
   list-style: none;
   padding: 0;
-  display: flex;
-  justify-content: space-evenly;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+  column-gap: 2px;
+}
+
+.languages-list li {
+  text-align: center;
 }
