--- a/src/styles/ProjectsPage.css
+++ b/src/styles/ProjectsPage.css
@@ -35,8 +35,9 @@
 }
 
 .project-links {
-  padding: 0;
   list-style: none;
+  display: grid;
+  grid-template-columns: 30px 30px;
 }
 
 .description {
