--- a/src/styles/ProjectsPage.css
+++ b/src/styles/ProjectsPage.css
@@ -32,6 +32,9 @@
 .project-infos {
   padding: 10px 20px;
   height: 50%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .project-links {
@@ -41,7 +44,7 @@
 }
 
 .description {
-  height: 70px;
+  height: 50px;
   margin: 0 0 15px;
 }
 
