--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -27,7 +27,6 @@ body {
 
 .layout-default {
   display: flex;
-  height: 80%;
 }
 
 .layout-default main {
@@ -54,7 +53,7 @@ body {
   justify-content: space-between;
   align-items: center;
   display: flex;
-  height: 100%;
+  max-height: 100%;
   width: 100px;
   position: relative;
   overflow-y: hidden;
@@ -110,4 +109,56 @@ hr {
 
 #__next {
   height: 100vh;
+  width: 100%;
+}
+
+@media screen and (max-width: 1100px) {
+  .layout-default {
+    flex-direction: column;
+    height: 100%;
+    margin-bottom: 50px;
+  }
+
+  .aside-section {
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    display: flex;
+    height: 50px;
+    width: 90%;
+    align-self: center;
+    overflow-y: hidden;
+  }
+
+  .contacts-list {
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+  }
+
+  .layout-default main {
+    margin: 0;
+    width: 100%;
+  }
+
+  hr {
+    background-color: black;
+    width: 30%;
+    height: 1px;
+    z-index: -1;
+  }
+
+  #__next {
+    min-height: 760px;
+    height: 120vh;
+    width: 100%;
+  }
+}
+
+@media screen and (max-width: 650px) {
+  #__next {
+    min-height: 1000px;
+    height: 120vh;
+    width: 100%;
+  }
 }
