--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -27,6 +27,7 @@ body {
 
 .layout-default {
   display: flex;
+  height: 80vh;
 }
 
 .layout-default main {
@@ -108,7 +109,8 @@ hr {
 }
 
 #__next {
-  height: 100vh;
+  max-height: 720px;
+  /* height: 100vh; */
   width: 100%;
 }
 
